--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.3",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
+    "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/x-data-grid": "^5.5.1",
+    "chart.js": "^3.7.1",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.29.1",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-number-format": "^4.9.1",
+    "react-router-dom": "6",
+    "styled-components": "^5.3.3",
+    "zustand": "^3.7.0",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.23",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.9.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -27,12 +47,19 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": ">=6",
+    "jest": "^27.5.1",
     "lint-staged": ">=10",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --fix"
+    "*.ts": "eslint --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
