--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@types/jest": "^27.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.33",
@@ -36,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-jest": "^27.5.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
