--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.3",
