--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,8 @@
 {
+  "extends": [
+    "config:base"
+  ],
   "branchPrefix": "renovate/",
-  "dryRun": true,
-  "username": "renovate-release",
-  "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
   "onboarding": false,
   "platform": "github",
   "repositories": [
