Update Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,8 @@
     "config:base"
   ],
   "branchPrefix": "renovate/",
+  "username": "renovate-release",
+  "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
   "onboarding": false,
   "platform": "github",
   "repositories": [
@@ -22,5 +24,6 @@
       "dependencyDashboardApproval": false,
       "stabilityDays": 0
     }
-  ]
+  ],
+  "commitMessagePrefix": "chore(deps):"
 }
