--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v32.238.4
         with:
-          configurationFile: renovate.json
+          configurationFile: renovate.js
           token: ${{ secrets.RENOVATE_TOKEN }}
